[package]
name = "hello-rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde_json = { version = "1", features = ["raw_value"] }

# Documentation: https://docs.rs/vercel_runtime/latest/vercel_runtime
vercel_runtime = { version = "1.1.4" }

# Each handler has to be specified as [[bin]]
[[bin]]
name = "hello-rust"
path = "api/hello-rust.rs"